// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renders 1`] = `
<button
  class="sc-beqWaB sc-gueYoa hqkyfE ePjPqh"
>
  foo
</button>
`;

exports[`renders as a secondary button 1`] = `
<button
  class="sc-beqWaB sc-gueYoa cKyvAn ePjPqh"
>
  foo
</button>
`;
